# TesteCMake

./: CMakeLists.txt  README.md
docs/: installJsonCpp.md
validate/: CMakeLists.txt
validate/include/: json_validate.h
validate/source/: main.cpp
